# xchu_localization

./: README.md
global_localization/: CMakeLists.txt  package.xml
global_localization/include/: common.h
global_localization/include/global_localization/: cloud_data.hpp  global_localization.h  gnss_data.hpp  gps_init.h  points_prefilter.h  sc_localization.h
global_localization/include/gps_tools/: gps_init.cc
global_localization/include/scan_context/: Scancontext.cpp  Scancontext.h
global_localization/include/utils/: params_utils.h  registrations.cpp  registrations.hpp  transform.h
global_localization/launch/: sc_test.launch  test_fsk.launch  test_shandong.launch  test_university_park.launch
global_localization/params/: daxueyuan.yaml  fsk.yaml  prefilter.yaml  shandong.yaml
global_localization/rviz/: fsk.rviz  fsk2.rviz  map_localization.rviz  shandong.rviz  university_park.rviz
global_localization/src/: global_localization.cpp  gps_init.cc  points_prefilter.cpp  sc_localization.cpp
global_localization/src/node/: global_localization_node.cpp  gps_init_node.cpp  points_prefilter_node.cpp  sc_localization_node.cpp  test_sc_node.cpp
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/include/gps_tools/: gpsTools.h
lidar_localization/include/lidar_localization/: kalman_filter.h  lidar_localization.h  pose_estimator.h  pose_system.h
lidar_localization/launch/: test_fsk.launch  test_university_park.launch
lidar_localization/params/: daxueyuan.yaml  fsk.yaml
lidar_localization/rviz/: daxueyuan.rviz  map_localization.rviz  university_park.rviz
lidar_localization/src/: lidar_localization.cpp  lidar_localization_node.cpp
map_loader/: CMakeLists.txt  package.xml
map_loader/include/debug_publisher/: debug_publisher.cpp  debug_publisher.h
map_loader/include/file_writer/: file_writer.cpp  file_writer.h
map_loader/include/file_writer/lane_info_writer/: lane_info_writer.cpp  lane_info_writer.h
map_loader/include/file_writer/roadside_writer/: roadside_writer.cpp  roadside_writer.h
map_loader/include/file_writer/roadside_writer/factory_roadside_builder/: base_roadside_builder.h  factory_roadside_builder.cpp  factory_roadside_builder.h  roadside_builder_top.h  union_roadside_builder.cpp  union_roadside_builder.h
map_loader/include/file_writer/roadside_writer/factory_roadside_builder/backup/: block_roadside_builder.cpp  block_roadside_builder.h
map_loader/include/file_writer/roadside_writer/factory_roadside_builder/type/: attach_point.h  block.h  check_sequence.h  connection_info.h  (+5 more)
map_loader/include/file_writer/routemap_writer/: lane_end_node_id.h  node.cpp  node.h  routemap_writer.cpp  routemap_writer.h
map_loader/include/file_writer/topomap_writer/: topomap_writer.cpp  topomap_writer.h
map_loader/include/gps_tools/: gps_init.h
map_loader/include/lanelet2_core/: Attribute.h  Exceptions.h  Forward.h  LaneletMap.h
map_loader/include/lanelet2_core/geometry/: Area.h  BoundingBox.h  GeometryHelper.h  Lanelet.h  LaneletMap.h  LineString.h  Point.h  Polygon.h  RegulatoryElement.h
map_loader/include/lanelet2_core/geometry/impl/: Area.h  Lanelet.h  LaneletMap.h  LineString.h  Polygon.h
map_loader/include/lanelet2_core/primitives/: Area.h  BasicRegulatoryElements.h  BoundingBox.h  CompoundLineString.h  CompoundPolygon.h  GPSPoint.h  Lanelet.h  LaneletOrArea.h  LaneletSequence.h  LineString.h  LineStringOrPolygon.h  Point.h  Polygon.h  Primitive.h  RegulatoryElement.h  Traits.h
map_loader/include/lanelet2_core/utility/: CompoundIterator.h  HybridMap.h  Optional.h  ReverseAndForwardIterator.h  TransformIterator.h  Units.h  Utilities.h
map_loader/include/lanelet2_io/: Configuration.h  Exceptions.h  Io.h  Projection.h
map_loader/include/lanelet2_io/io_handlers/: BinHandler.h  Factory.h  IoHandler.h  OsmFile.h  OsmHandler.h  Parser.h  Serialize.h  Writer.h
map_loader/include/lanelet2_projection/: Mercator.h  UTM.h
map_loader/include/lanelet2_routing/: Exceptions.h  Forward.h  LaneletPath.h  Route.h  RoutingCost.h  RoutingGraph.h  RoutingGraphContainer.h  Types.h
map_loader/include/lanelet2_routing/internal/: Graph.h  GraphUtils.h  RouteBuilder.h  RoutingGraphBuilder.h  RoutingGraphVisualization.h  ShortestPath.h
map_loader/include/lanelet2_traffic_rules/: Exceptions.h  GenericTrafficRules.h  GermanTrafficRules.h  TrafficRules.h  TrafficRulesFactory.h
map_loader/include/lanelet2_validation/: BasicValidator.h  Cli.h  Issue.h  Validation.h  ValidatorFactory.h
map_loader/include/lanelet2_validation/validators/mapping/: BoolTags.h  CurvatureTooBig.h  DuplicatedPoints.h  MandatoryTags.h  PointsTooClose.h  UnknownTagValue.h  UnknownTags.h
map_loader/include/lanelet2_validation/validators/routing/: RoutingGraphIsValid.h
map_loader/include/map_file/: opendrive_map_loader.h
map_loader/include/op_utility/: DataRW.cpp  DataRW.h  UtilityH.cpp  UtilityH.h
map_loader/include/param_manager/: param_manager.cpp  param_manager.h
map_loader/include/pointsmap_loader/: pointsmap_loader.h
map_loader/launch/: points_map_loader.launch
map_loader/lib/lanelet2/: liblanelet2_core.so.0  liblanelet2_io.so.0  liblanelet2_projection.so.0  liblanelet2_routing.so.0  liblanelet2_traffic_rules.so.0  liblanelet2_validation.so.0
map_loader/nodes/points_map_loader/: points_map_loader.cpp
map_loader/params/: daxueyuan.yaml  pointsmap.yaml
map_loader/proto/: CMakeLists.txt  opendrive_generator_param.proto
map_loader/rviz/: default.rviz  global_map.rviz  opendrive.rviz  points_map.rviz  vectormap.rviz
(+7 files in other folders)
