find_package(Protobuf REQUIRED)
message("dir=${CMAKE_CURRENT_SOURCE_DIR}")
FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
message(STATUS ${protofiles})
PROTOBUF_GENERATE_CPP(PROTOSRCS PROTOHDRS ${protofiles})
message(STATUS ${PROTOSRCS})
add_library(opendrive_generator_param STATIC ${PROTOSRCS} ${PROTOHDRS})
target_link_libraries(opendrive_generator_param libprotobuf.a)
target_include_directories(opendrive_generator_param PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
